@@ -39,7 +39,7 @@ syntax.textLimitLineVisible=Show text limit line
 syntax.textLimitLineWidth=Text limit line width
 syntax.highlightCurrentLine=Highlight current line
 syntax.lineNumbersEnabled=Enable line numbers
-
+syntax.useCopyAsRtf=Copy shortcuts use the "Rich Text Format"
 
 syntax.abrevclose=Close
 syntax.abrevNewLineNote=Use \\n in corrections for line break. Note: Bookmarks are more powerful than abreviations.
